[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cells-toolkit"
version = "0.1.0"
description = "A toolkit for working with cells. :)"
readme = "README.md"
authors = [
    { name = "Cell Webb", email = "cell dot webb at proton dot me" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent"
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.30.1",
    "click>=8.1.7",
    "hatch>=1.13.0",
    "hatch-vcs>=0.4.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "bump2version>=1.0.1",
]
[project.scripts]
gac = "cells_toolkit.cli:gac"
ach = "cells_toolkit.cli:ach"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["cells_toolkit"]
known_third_party = [
    "aisuite", "anthropic", "arxiv", "beautifulsoup4", "black", "bump2version", 
    "click", "dateparser", "decorator", "dotenv", "isort", "matplotlib", "pandas", "praw", 
    "pre-commit", "pytest", "pytest-cov", "pydantic", "requests", "rich", 
    "seaborn", "tenacity", "tomli", "tomli_w", "tqdm",
]
[tool.hatch.metadata]
hooks.version.source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["src/**/*", "pyproject.toml", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
include = ["src/**/*", "pyproject.toml", "README.md", "LICENSE"]
